objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Avail_Tickets__c</fullName>
        <label>Available Tickets</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Tickets__c</fullName>
        <label>#Booked Tickets</label>
        <summarizedField>Booking__c.Number_of_Tickets_Booked__c</summarizedField>
        <summaryForeignKey>Booking__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Concert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concert</label>
        <referenceTo>Concert__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Timing__c</fullName>
        <label>Event Timing</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Price__c</fullName>
        <label>Ticket Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tickets__c</fullName>
        <label>Total Tickets</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waiting_List__c</fullName>
        <label>Waiting List</label>
        <summarizedField>Booking__c.Waiting_Tickets__c</summarizedField>
        <summaryForeignKey>Booking__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Event_View</fullName>
        <columns>NAME</columns>
        <columns>Booked_Tickets__c</columns>
        <columns>Avail_Tickets__c</columns>
        <columns>Event_Timing__c</columns>
        <columns>Ticket_Price__c</columns>
        <columns>Total_Tickets__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <label>Event View</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Available_Tickets_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>Avail_Tickets__c  &lt; 0</errorConditionFormula>
        <errorMessage>Available Tickets are Zero</errorMessage>
    </validationRules>
</CustomObject>